# machine_learning_course

./: .nojekyll  10_svm_y_no_supervisado.html  10_svm_y_no_supervisado.qmd  10_svm_y_no_supervisado.quarto_ipynb  11_perceptron_y_redes_conexas.html  11_perceptron_y_redes_conexas.qmd  12_gradient_descent_and_autodiff.qmd  13_evaluacion_y_regularizacion_de_nn.html  13_evaluacion_y_regularizacion_de_nn.qmd  14_redes_convolucionales.html  14_redes_convolucionales.qmd  15_redes_residuales.html  15_redes_residuales.qmd  16_transformadores.html  16_transformadores.qmd  17_flujos_normalizantes.html  17_flujos_normalizantes.qmd  18_PINNs.html  18_PINNs.qmd  19_Operador_Neural.html  19_Operador_Neural.qmd  1_probabilidad.html  1_probabilidad.qmd  2_distribuciones_y_estimacion.html  2_distribuciones_y_estimacion.qmd  3_verosimilitud.html  3_verosimilitud.qmd  4_minimos_cuadrados_intervalos.html  4_minimos_cuadrados_intervalos.qmd  5_testeo_de_hipotesis_entropia.html  5_testeo_de_hipotesis_entropia.qmd  6_aprendizaje_automatico_regresion_lineal.html  6_aprendizaje_automatico_regresion_lineal.qmd  7_clasificacion.html  7_clasificacion.qmd  8_seleccion_de_modelos.html  8_seleccion_de_modelos.qmd  9_arboles_bosques_boosting.html  9_arboles_bosques_boosting.qmd  _quarto.yml  (+10 more)
