[project]
name = "machine-learning-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]
