[project]
name = "machine-learning-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "xgboost>=3.1.2",
]
